#!/usr/bin/env python3
"""
–°–∫—Ä–∏–ø—Ç –¥–ª—è –∑–∞–ø–æ–ª–Ω–µ–Ω–∏—è Neo4j —Ç–µ—Å—Ç–æ–≤—ã–º–∏ –¥–∞–Ω–Ω—ã–º–∏
–°–æ–∑–¥–∞–µ—Ç 100 –±–ª–æ–∫–æ–≤ –∏ 100 —Å–≤—è–∑–µ–π –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è –∫–∞—Ä—Ç—ã –∑–Ω–∞–Ω–∏–π
"""

import sys
import os
from typing import List, Dict, Any
import random
import string
from datetime import datetime

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ api –ø–∞–ø–∫–µ –¥–ª—è –∏–º–ø–æ—Ä—Ç–∞ –º–æ–¥–µ–ª–µ–π
sys.path.insert(0, os.path.join(os.path.dirname(__file__), '..', 'api'))

from neomodel import config, db, clear_neo4j_database
from models import User, Block, Tag, LinkMetadata

# –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Neo4j
NEO4J_URL = os.getenv('NEO4J_URL', 'bolt://localhost:7687')
NEO4J_USER = os.getenv('NEO4J_USER', 'neo4j')
NEO4J_PASSWORD = os.getenv('NEO4J_PASSWORD', 'password')

config.DATABASE_URL = f'bolt://{NEO4J_USER}:{NEO4J_PASSWORD}@{NEO4J_URL.replace("bolt://", "")}'

def generate_random_content(length: int = None) -> str:
    """–ì–µ–Ω–µ—Ä–∏—Ä—É–µ—Ç —Å–ª—É—á–∞–π–Ω—ã–π –∫–æ–Ω—Ç–µ–Ω—Ç –¥–ª—è –±–ª–æ–∫–∞"""
    topics = [
        '–ü—Ä–æ–≥—Ä–∞–º–º–∏—Ä–æ–≤–∞–Ω–∏–µ', 'Python', 'JavaScript', 'React', 'Vue.js', 'Angular',
        '–ë–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö', 'SQL', 'NoSQL', 'MongoDB', 'PostgreSQL', 'MySQL',
        '–í–µ–±-—Ä–∞–∑—Ä–∞–±–æ—Ç–∫–∞', 'Frontend', 'Backend', 'Fullstack', 'DevOps',
        '–ê–ª–≥–æ—Ä–∏—Ç–º—ã', '–°—Ç—Ä—É–∫—Ç—É—Ä—ã –¥–∞–Ω–Ω—ã—Ö', '–°–æ—Ä—Ç–∏—Ä–æ–≤–∫–∞', '–ü–æ–∏—Å–∫', '–ì—Ä–∞—Ñ—ã',
        '–ú–∞—à–∏–Ω–Ω–æ–µ –æ–±—É—á–µ–Ω–∏–µ', '–ù–µ–π—Ä–æ–Ω–Ω—ã–µ —Å–µ—Ç–∏', 'Deep Learning', 'TensorFlow',
        '–û–±–ª–∞—á–Ω—ã–µ —Ç–µ—Ö–Ω–æ–ª–æ–≥–∏–∏', 'AWS', 'Docker', 'Kubernetes', 'CI/CD',
        '–¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ', 'Unit —Ç–µ—Å—Ç—ã', 'Integration —Ç–µ—Å—Ç—ã', 'E2E —Ç–µ—Å—Ç—ã',
        '–ê—Ä—Ö–∏—Ç–µ–∫—Ç—É—Ä–∞', '–ú–∏–∫—Ä–æ—Å–µ—Ä–≤–∏—Å—ã', '–ú–æ–Ω–æ–ª–∏—Ç', 'REST API', 'GraphQL',
        '–ë–µ–∑–æ–ø–∞—Å–Ω–æ—Å—Ç—å', '–ê—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏—è', '–ê–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏—è', 'HTTPS', 'OAuth',
        '–ú–æ–±–∏–ª—å–Ω–∞—è —Ä–∞–∑—Ä–∞–±–æ—Ç–∫–∞', 'iOS', 'Android', 'React Native', 'Flutter',
        'Data Science', 'Pandas', 'NumPy', 'Matplotlib', 'Jupyter',
        '–û–ø–µ—Ä–∞—Ü–∏–æ–Ω–Ω—ã–µ —Å–∏—Å—Ç–µ–º—ã', 'Linux', 'Windows', 'macOS', 'Bash',
        '–°–µ—Ç–µ–≤—ã–µ —Ç–µ—Ö–Ω–æ–ª–æ–≥–∏–∏', 'TCP/IP', 'HTTP', 'WebSocket', 'gRPC',
        '–í–µ—Ä—Å–∏–æ–Ω–Ω—ã–π –∫–æ–Ω—Ç—Ä–æ–ª—å', 'Git', 'GitHub', 'GitLab', 'Branching',
        '–ú–∞—Ç–µ–º–∞—Ç–∏–∫–∞', '–°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞', '–õ–∏–Ω–µ–π–Ω–∞—è –∞–ª–≥–µ–±—Ä–∞', '–î–∏—Å–∫—Ä–µ—Ç–Ω–∞—è –º–∞—Ç–µ–º–∞—Ç–∏–∫–∞'
    ]
    
    # –í—ã–±–∏—Ä–∞–µ–º —Å–ª—É—á–∞–π–Ω—É—é —Ç–µ–º—É
    topic = random.choice(topics)
    
    # –î–æ–±–∞–≤–ª—è–µ–º –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω–æ–µ –æ–ø–∏—Å–∞–Ω–∏–µ
    descriptions = [
        '–û—Å–Ω–æ–≤—ã –∏ –ø—Ä–∏–Ω—Ü–∏–ø—ã',
        '–ü—Ä–æ–¥–≤–∏–Ω—É—Ç—ã–µ —Ç–µ—Ö–Ω–∏–∫–∏',
        '–õ—É—á—à–∏–µ –ø—Ä–∞–∫—Ç–∏–∫–∏',
        '–ü–∞—Ç—Ç–µ—Ä–Ω—ã –ø—Ä–æ–µ–∫—Ç–∏—Ä–æ–≤–∞–Ω–∏—è',
        '–ü—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ—Å—Ç—å –∏ –æ–ø—Ç–∏–º–∏–∑–∞—Ü–∏—è',
        '–ò–Ω—Å—Ç—Ä—É–º–µ–Ω—Ç—ã –∏ –±–∏–±–ª–∏–æ—Ç–µ–∫–∏',
        '–°–æ–≤—Ä–µ–º–µ–Ω–Ω—ã–µ –ø–æ–¥—Ö–æ–¥—ã',
        '–ê—Ä—Ö–∏—Ç–µ–∫—Ç—É—Ä–Ω—ã–µ —Ä–µ—à–µ–Ω–∏—è',
        '–ü—Ä–∞–∫—Ç–∏—á–µ—Å–∫–∏–µ –ø—Ä–∏–º–µ—Ä—ã',
        '–ò–Ω—Ç–µ–≥—Ä–∞—Ü–∏—è –∏ –≤–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–∏–µ'
    ]
    
    description = random.choice(descriptions)
    
    if length:
        content = f"{topic}: {description}"
        if len(content) > length:
            content = content[:length-3] + "..."
        return content
    
    return f"{topic}: {description}"

def generate_user_data() -> Dict[str, Any]:
    """–ì–µ–Ω–µ—Ä–∏—Ä—É–µ—Ç –¥–∞–Ω–Ω—ã–µ —Ç–µ—Å—Ç–æ–≤–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"""
    
    names = ['–ê–ª–µ–∫—Å–µ–π', '–ú–∞—Ä–∏—è', '–î–º–∏—Ç—Ä–∏–π', '–ê–Ω–Ω–∞', '–°–µ—Ä–≥–µ–π', '–ï–ª–µ–Ω–∞', '–ê–Ω–¥—Ä–µ–π', '–û–ª—å–≥–∞']
    surnames = ['–ò–≤–∞–Ω–æ–≤', '–ü–µ—Ç—Ä–æ–≤', '–°–∏–¥–æ—Ä–æ–≤', '–ö–æ–∑–ª–æ–≤', '–ù–æ–≤–∏–∫–æ–≤', '–ú–æ—Ä–æ–∑–æ–≤', '–í–æ–ª–∫–æ–≤', '–°–æ–∫–æ–ª–æ–≤']
    
    name = random.choice(names)
    surname = random.choice(surnames)
    
    return {
        'login': f"user_{name.lower()}_{random.randint(1, 999)}",
        'password': 'password123',  # –í —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ –¥–æ–ª–∂–Ω–æ –±—ã—Ç—å –∑–∞—Ö–µ—à–∏—Ä–æ–≤–∞–Ω–æ
        'nickname': f"{name}_{random.randint(1, 99)}",
        'surname': surname,
        'given_names': name
    }

def create_test_user() -> User:
    """–°–æ–∑–¥–∞–µ—Ç —Ç–µ—Å—Ç–æ–≤–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"""
    user_data = generate_user_data()
    
    print(f"–°–æ–∑–¥–∞—é —Ç–µ—Å—Ç–æ–≤–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è: {user_data['nickname']}")
    
    user = User(
        login=user_data['login'],
        password=user_data['password'],
        nickname=user_data['nickname'],
        surname=user_data['surname'],
        given_names=user_data['given_names']
    ).save()
    
    return user

def create_test_blocks(user: User, count: int = 100) -> List[Block]:
    """–°–æ–∑–¥–∞–µ—Ç —Ç–µ—Å—Ç–æ–≤—ã–µ –±–ª–æ–∫–∏"""
    blocks = []
    
    print(f"–°–æ–∑–¥–∞—é {count} —Ç–µ—Å—Ç–æ–≤—ã—Ö –±–ª–æ–∫–æ–≤...")
    
    # –°–æ–∑–¥–∞–µ–º –±–ª–æ–∫–∏ –≤ —Ä–∞–∑–Ω—ã—Ö —Å–ª–æ—è—Ö –∏ —É—Ä–æ–≤–Ω—è—Ö
    max_layers = 10  # –ú–∞–∫—Å–∏–º—É–º 10 —Å–ª–æ–µ–≤
    max_levels = 5   # –ú–∞–∫—Å–∏–º—É–º 5 —É—Ä–æ–≤–Ω–µ–π
    
    for i in range(count):
        # –†–∞—Å–ø—Ä–µ–¥–µ–ª—è–µ–º –±–ª–æ–∫–∏ –ø–æ —Å–ª–æ—è–º –∏ —É—Ä–æ–≤–Ω—è–º
        layer = i % max_layers
        level = (i // max_layers) % max_levels
        
        content = generate_random_content(50)  # –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –¥–ª–∏–Ω—É
        
        block = Block(
            content=content,
            layer=layer,
            level=level
        ).save()
        
        # –°–≤—è–∑—ã–≤–∞–µ–º —Å –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–º
        block.created_by.connect(user)
        
        blocks.append(block)
        
        if (i + 1) % 20 == 0:
            print(f"  –°–æ–∑–¥–∞–Ω–æ {i + 1} –±–ª–æ–∫–æ–≤...")
    
    print(f"‚úì –°–æ–∑–¥–∞–Ω–æ {len(blocks)} –±–ª–æ–∫–æ–≤")
    return blocks

def create_test_links(blocks: List[Block], user: User, count: int = 100) -> List[LinkMetadata]:
    """–°–æ–∑–¥–∞–µ—Ç —Ç–µ—Å—Ç–æ–≤—ã–µ —Å–≤—è–∑–∏ –º–µ–∂–¥—É –±–ª–æ–∫–∞–º–∏"""
    links = []
    
    print(f"–°–æ–∑–¥–∞—é {count} —Ç–µ—Å—Ç–æ–≤—ã—Ö —Å–≤—è–∑–µ–π...")
    
    # –°–æ—Ä—Ç–∏—Ä—É–µ–º –±–ª–æ–∫–∏ –ø–æ —Å–ª–æ—è–º –¥–ª—è —Å–æ–∑–¥–∞–Ω–∏—è DAG
    sorted_blocks = sorted(blocks, key=lambda b: (b.layer, b.level))
    
    attempts = 0
    max_attempts = count * 5  # –£–≤–µ–ª–∏—á–∏–≤–∞–µ–º –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ –ø–æ–ø—ã—Ç–æ–∫
    
    while len(links) < count and attempts < max_attempts:
        attempts += 1
        
        # –í—ã–±–∏—Ä–∞–µ–º –±–ª–æ–∫–∏ —Ç–∞–∫, —á—Ç–æ–±—ã from_block –±—ã–ª –≤ –º–µ–Ω—å—à–µ–º —Å–ª–æ–µ —á–µ–º to_block
        from_idx = random.randint(0, len(sorted_blocks) - 2)
        to_idx = random.randint(from_idx + 1, len(sorted_blocks) - 1)
        
        from_block = sorted_blocks[from_idx]
        to_block = sorted_blocks[to_idx]
        
        # –î–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω–∞—è –ø—Ä–æ–≤–µ—Ä–∫–∞ —Å–ª–æ–µ–≤ –¥–ª—è –∏–∑–±–µ–∂–∞–Ω–∏—è —Ü–∏–∫–ª–æ–≤
        if from_block.layer >= to_block.layer:
            continue
            
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ —Å–≤—è–∑—å –µ—â–µ –Ω–µ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç
        try:
            existing_link = LinkMetadata.nodes.filter(
                source_id=getattr(from_block, 'element_id'),
                target_id=getattr(to_block, 'element_id')
            ).first()
        except LinkMetadata.DoesNotExist:
            existing_link = None
        
        if existing_link:
            continue
        
        try:
            # –°–æ–∑–¥–∞–µ–º —Å–≤—è–∑—å –Ω–∞–ø—Ä—è–º—É—é –±–µ–∑ –ø—Ä–æ–≤–µ—Ä–∫–∏ –∞—Ü–∏–∫–ª–∏—á–Ω–æ—Å—Ç–∏ (–º—ã —É–∂–µ –æ–±–µ—Å–ø–µ—á–∏–ª–∏ DAG)
            # from_block.link_to(to_block, user)
            
            # –°–æ–∑–¥–∞–µ–º –ø—Ä—è–º—É—é —Å–≤—è–∑—å
            from_block.target.connect(to_block)
            
            # –°–æ–∑–¥–∞–µ–º –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
            link_metadata = LinkMetadata(
                source_id=getattr(from_block, 'element_id'),
                target_id=getattr(to_block, 'element_id')
            ).save()
            link_metadata.created_by.connect(user)
            
            links.append(link_metadata)
            
            if len(links) % 20 == 0:
                print(f"  –°–æ–∑–¥–∞–Ω–æ {len(links)} —Å–≤—è–∑–µ–π...")
                
        except Exception as e:
            print(f"–û—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è —Å–≤—è–∑–∏: {e}")
            continue
    
    print(f"‚úì –°–æ–∑–¥–∞–Ω–æ {len(links)} —Å–≤—è–∑–µ–π (–∏–∑ {attempts} –ø–æ–ø—ã—Ç–æ–∫)")
    return links

def create_test_tags() -> List[Tag]:
    """–°–æ–∑–¥–∞–µ—Ç —Ç–µ—Å—Ç–æ–≤—ã–µ —Ç–µ–≥–∏"""
    tag_names = [
        'python', 'javascript', 'react', 'vue', 'angular', 'node.js',
        'database', 'sql', 'nosql', 'mongodb', 'postgresql',
        'frontend', 'backend', 'fullstack', 'devops',
        'algorithms', 'data-structures', 'machine-learning',
        'web-development', 'mobile', 'testing', 'security',
        'cloud', 'docker', 'kubernetes', 'api', 'microservices'
    ]
    
    tags = []
    
    print(f"–°–æ–∑–¥–∞—é {len(tag_names)} —Ç–µ–≥–æ–≤...")
    
    for tag_name in tag_names:
        tag = Tag(text=tag_name).save()
        tags.append(tag)
    
    print(f"‚úì –°–æ–∑–¥–∞–Ω–æ {len(tags)} —Ç–µ–≥–æ–≤")
    return tags

def assign_random_tags(blocks: List[Block], tags: List[Tag]):
    """–ù–∞–∑–Ω–∞—á–∞–µ—Ç —Å–ª—É—á–∞–π–Ω—ã–µ —Ç–µ–≥–∏ –±–ª–æ–∫–∞–º"""
    print("–ù–∞–∑–Ω–∞—á–∞—é —Å–ª—É—á–∞–π–Ω—ã–µ —Ç–µ–≥–∏ –±–ª–æ–∫–∞–º...")
    
    for block in blocks:
        # –ö–∞–∂–¥–æ–º—É –±–ª–æ–∫—É –Ω–∞–∑–Ω–∞—á–∞–µ–º 1-3 —Å–ª—É—á–∞–π–Ω—ã—Ö —Ç–µ–≥–∞
        num_tags = random.randint(1, 3)
        block_tags = random.sample(tags, min(num_tags, len(tags)))
        
        for tag in block_tags:
            tag.block.connect(block)
    
    print("‚úì –¢–µ–≥–∏ –Ω–∞–∑–Ω–∞—á–µ–Ω—ã")

def verify_data():
    """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç —á—Ç–æ –¥–∞–Ω–Ω—ã–µ —Å–æ–∑–¥–∞–ª–∏—Å—å –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ"""
    print("\n=== –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–æ–∑–¥–∞–Ω–Ω—ã—Ö –¥–∞–Ω–Ω—ã—Ö ===")
    
    # –ü–æ–¥—Å—á–∏—Ç—ã–≤–∞–µ–º –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–æ–∑–¥–∞–Ω–Ω—ã—Ö –æ–±—ä–µ–∫—Ç–æ–≤
    users_count = len(User.nodes.all())
    blocks_count = len(Block.nodes.all())
    links_count = len(LinkMetadata.nodes.all())
    tags_count = len(Tag.nodes.all())
    
    print(f"–ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–∏: {users_count}")
    print(f"–ë–ª–æ–∫–∏: {blocks_count}")
    print(f"–°–≤—è–∑–∏: {links_count}")
    print(f"–¢–µ–≥–∏: {tags_count}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å–≤—è–∑–∏ –±–ª–æ–∫–æ–≤ —Å –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è–º–∏
    blocks_with_users = 0
    for block in Block.nodes.all():
        if block.created_by.single():
            blocks_with_users += 1
    
    print(f"–ë–ª–æ–∫–∏ —Å–æ —Å–≤—è–∑—å—é –∫ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—é: {blocks_with_users}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å–≤—è–∑–∏ —Ç–µ–≥–æ–≤ —Å –±–ª–æ–∫–∞–º–∏
    tags_with_blocks = 0
    for tag in Tag.nodes.all():
        if tag.block.all():
            tags_with_blocks += 1
    
    print(f"–¢–µ–≥–∏ —Å–æ —Å–≤—è–∑—å—é –∫ –±–ª–æ–∫–∞–º: {tags_with_blocks}")
    
    return {
        'users': users_count,
        'blocks': blocks_count,
        'links': links_count,
        'tags': tags_count,
        'blocks_with_users': blocks_with_users,
        'tags_with_blocks': tags_with_blocks
    }

def main():
    """–û—Å–Ω–æ–≤–Ω–∞—è —Ñ—É–Ω–∫—Ü–∏—è"""
    print("=== –ó–∞–ø–æ–ª–Ω–µ–Ω–∏–µ Neo4j —Ç–µ—Å—Ç–æ–≤—ã–º–∏ –¥–∞–Ω–Ω—ã–º–∏ ===")
    print(f"–ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ Neo4j: {config.DATABASE_URL}")
    
    try:
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ
        db.cypher_query("RETURN 1")
        print("‚úì –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ Neo4j —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ")
        
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Neo4j: {e}")
        print("–£–±–µ–¥–∏—Ç–µ—Å—å —á—Ç–æ Neo4j –∑–∞–ø—É—â–µ–Ω –∏ –¥–æ—Å—Ç—É–ø–µ–Ω")
        return False
    
    # –ü—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ –æ –æ—á–∏—Å—Ç–∫–µ –±–∞–∑—ã
    response = input("\n‚ö†Ô∏è  –í–ù–ò–ú–ê–ù–ò–ï: –≠—Ç–æ –æ—á–∏—Å—Ç–∏—Ç –í–°–Æ –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö Neo4j. –ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å? (yes/no): ")
    if response.lower() != 'yes':
        print("–û–ø–µ—Ä–∞—Ü–∏—è –æ—Ç–º–µ–Ω–µ–Ω–∞")
        return False
    
    try:
        # –û—á–∏—â–∞–µ–º –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö
        print("\nüóëÔ∏è  –û—á–∏—â–∞—é –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö...")
        clear_neo4j_database(db)
        print("‚úì –ë–∞–∑–∞ –¥–∞–Ω–Ω—ã—Ö –æ—á–∏—â–µ–Ω–∞")
        
        # –°–æ–∑–¥–∞–µ–º —Ç–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ
        print("\nüìä –°–æ–∑–¥–∞—é —Ç–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ...")
        
        # 1. –°–æ–∑–¥–∞–µ–º –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
        user = create_test_user()
        
        # 2. –°–æ–∑–¥–∞–µ–º –±–ª–æ–∫–∏
        blocks = create_test_blocks(user, 100)
        
        # 3. –°–æ–∑–¥–∞–µ–º —Å–≤—è–∑–∏
        links = create_test_links(blocks, user, 100)
        
        # 4. –°–æ–∑–¥–∞–µ–º —Ç–µ–≥–∏
        tags = create_test_tags()
        
        # 5. –ù–∞–∑–Ω–∞—á–∞–µ–º —Ç–µ–≥–∏ –±–ª–æ–∫–∞–º
        assign_random_tags(blocks, tags)
        
        # 6. –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç
        stats = verify_data()
        
        print("\n‚úÖ –¢–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ —É—Å–ø–µ—à–Ω–æ —Å–æ–∑–¥–∞–Ω—ã!")
        print(f"üìà –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞: {stats}")
        
        return True
        
    except Exception as e:
        print(f"\n‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ —Å–æ–∑–¥–∞–Ω–∏–∏ –¥–∞–Ω–Ω—ã—Ö: {e}")
        import traceback
        traceback.print_exc()
        return False

if __name__ == "__main__":
    success = main()
    sys.exit(0 if success else 1) 